fix(UI): add z-index on on modals

--- a/src/component/FiltersPopHover/FiltersPopHover.module.scss
+++ b/src/component/FiltersPopHover/FiltersPopHover.module.scss
@@ -1,6 +1,7 @@
 @import 'styles/variables';
 
 .button {
+    z-index: 1;
     position: fixed;
     bottom: 2rem;
     right: 2rem;
