--- a/src/component/filters/filters.module.scss
+++ b/src/component/filters/filters.module.scss
@@ -10,6 +10,7 @@
     width: 400px;
     height: auto;
     padding: 20px;
+    z-index: 0;
 }
 
 .modal > h3 {
