--- a/src/component/header/header.module.scss
+++ b/src/component/header/header.module.scss
@@ -7,6 +7,7 @@
     display: flex;
     background-color: $secondary-dark;
     height: 50px;
+    z-index: 1;
 }
 
 .item {
