--- a/src/component/tooltip/tooltip.module.scss
+++ b/src/component/tooltip/tooltip.module.scss
@@ -2,6 +2,7 @@
 
 .tooltipContainer {
   position: relative;
+  z-index: 2;
 }
   
 .tooltipBox {
