--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -57,5 +57,6 @@ a {
 }
 
 .TVContainer {
+    z-index: -1;
     margin: 0px $main-margin 0px $main-margin;
 }
